[LFC][IFC] Fix fast/text/simple-line-with-multiple-renderers.html https://bugs.webkit.org/show_bug.cgi?id=205193 <rdar://problem/57900709>

Reviewed by Antti Koivisto.

Use LazyLineBreakIterator to find out if 2 (visually)adjacent non-whitespace inline items are
on a soft breaking opportunity.

* layout/inlineformatting/InlineLineBreaker.cpp:
(WebCore::Layout::endsWithBreakingOpportunity):
(WebCore::Layout::LineBreaker::Content::isAtContentBoundary):
* layout/inlineformatting/InlineTextItem.cpp:
(WebCore::Layout::moveToNextBreakablePosition):
* layout/inlineformatting/text/TextUtil.cpp:
(WebCore::Layout::TextUtil::findNextBreakablePosition):
* layout/inlineformatting/text/TextUtil.h:

Canonical link: https://commits.webkit.org/218392@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253468 268f45cc-cd09-0410-ab3c-d52691b4dbfc