Source/WebCore/layout/inlineformatting/InlineTextItem.cpp
@@ -28,9 +28,9 @@
 
 #if ENABLE(LAYOUT_FORMATTING_CONTEXT)
 
-#include "BreakLines.h"
 #include "FontCascade.h"
 #include "InlineSoftLineBreakItem.h"
+#include "TextUtil.h"
 
 namespace WebCore {
 namespace Layout {
@@ -48,33 +48,12 @@ static unsigned moveToNextNonWhitespacePosition(const StringView& textContent, u
     return nextNonWhiteSpacePosition - startPosition;
 }
 
-static unsigned moveToNextBreakablePosition(unsigned startPosition, LazyLineBreakIterator lineBreakIterator, const RenderStyle& style)
+static unsigned moveToNextBreakablePosition(unsigned startPosition, LazyLineBreakIterator& lineBreakIterator, const RenderStyle& style)
 {
-    auto findNextBreakablePosition = [&](auto startPosition) {
-        auto keepAllWordsForCJK = style.wordBreak() == WordBreak::KeepAll;
-        auto breakNBSP = style.autoWrap() && style.nbspMode() == NBSPMode::Space;
-
-        if (keepAllWordsForCJK) {
-            if (breakNBSP)
-                return nextBreakablePositionKeepingAllWords(lineBreakIterator, startPosition);
-            return nextBreakablePositionKeepingAllWordsIgnoringNBSP(lineBreakIterator, startPosition);
-        }
-
-        if (lineBreakIterator.mode() == LineBreakIteratorMode::Default) {
-            if (breakNBSP)
-                return WebCore::nextBreakablePosition(lineBreakIterator, startPosition);
-            return nextBreakablePositionIgnoringNBSP(lineBreakIterator, startPosition);
-        }
-
-        if (breakNBSP)
-            return nextBreakablePositionWithoutShortcut(lineBreakIterator, startPosition);
-        return nextBreakablePositionIgnoringNBSPWithoutShortcut(lineBreakIterator, startPosition);
-    };
-
     auto textLength = lineBreakIterator.stringView().length();
     auto startPositionForNextBreakablePosition = startPosition;
     while (startPositionForNextBreakablePosition < textLength) {
-        auto nextBreakablePosition = findNextBreakablePosition(startPositionForNextBreakablePosition);
+        auto nextBreakablePosition = TextUtil::findNextBreakablePosition(lineBreakIterator, startPositionForNextBreakablePosition, style);
         // Oftentimes the next breakable position comes back as the start position (most notably hyphens).
         if (nextBreakablePosition != startPosition)
             return nextBreakablePosition - startPosition;
